Restructure the project

--- a/example/cart.html
+++ b/example/cart.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>DiaCart Test</title>
+  <title>Cart</title>
 </head>
 <body>
-  
+  <div data-diacart-container></div>
 </body>
 </html>
