--- a/example/index.html
+++ b/example/index.html
@@ -38,7 +38,7 @@
             <a
               href="#"
               class="primary-card__add-to-cart-btn diacart-btn diacart-btn--primary diacart-btn--medium"
-              data-diacart-item-json="{&quot;id&quot;: 123, &quot;name&quot;: &quot;Lorem ipsum dolor (id123)&quot;, &quot;price&quot;: 299, &quot;image&quot;: &quot;https://picsum.photos/300/200?image=865&quot;}"
+              data-diacart-item-json='{"id": 123, "name": "Lorem ipsum dolor (id123)", "price": 299, "image": "https://picsum.photos/300/200?image=865"}'
               data-diacart-add-to-cart
             >
               <i class="fas fa-cart-plus"></i> Добавить в корзину
@@ -64,7 +64,7 @@
             <a
               href="#"
               class="primary-card__add-to-cart-btn diacart-btn diacart-btn--primary diacart-btn--medium"
-              data-diacart-item-json="{&quot;id&quot;: 46, &quot;name&quot;: &quot;Aliquam vehicula dui purus (id46)&quot;, &quot;price&quot;: 1300, &quot;image&quot;: &quot;https://picsum.photos/300/200?image=513&quot;}"
+              data-diacart-item-json='{"id": 46, "name": "Aliquam vehicula dui purus (id46)", "price": 1300, "image": "https://picsum.photos/300/200?image=513"}'
               data-diacart-add-to-cart
             >
               <i class="fas fa-cart-plus"></i> Добавить в корзину
